type_check_output_3.txt
services\stt-provider\src\stt_provider\service.py:42: error: Argument 2 to
"subscribe" of "NatsClient" has incompatible type
"Callable[[Any], Coroutine[Any, Any, None]]"; expected "str"  [arg-type]
    ...   await self.nats.subscribe(self.input_subject, self._on_audio_messag...
                                                        ^~~~~~~~~~~~~~~~~~~~~~
services\stt-provider\src\stt_provider\main.py:49: error: Argument "nats" to
"STTService" has incompatible type "Client"; expected "NatsClient"  [arg-type]
            service = STTService(nats=nats_client, transcriber=transcriber...
                                      ^~~~~~~~~~~
services\stt-provider\src\stt_provider\main.py:49: note: Following member(s) of "Client" have conflicts:
services\stt-provider\src\stt_provider\main.py:49: note:     Expected:
services\stt-provider\src\stt_provider\main.py:49: note:         def connect(self, servers: list[str] | str, **kwargs: Any) -> Coroutine[Any, Any, None]
services\stt-provider\src\stt_provider\main.py:49: note:     Got:
services\stt-provider\src\stt_provider\main.py:49: note:         def connect(self, servers: str | list[str] = ..., error_cb: Callable[[Exception], Awaitable[None]] | None = ..., disconnected_cb: Callable[[], Awaitable[None]] | None = ..., closed_cb: Callable[[], Awaitable[None]] | None = ..., discovered_server_cb: Callable[[], Awaitable[None]] | None = ..., reconnected_cb: Callable[[], Awaitable[None]] | None = ..., name: str | None = ..., pedantic: bool = ..., verbose: bool = ..., allow_reconnect: bool = ..., connect_timeout: int = ..., reconnect_time_wait: int = ..., max_reconnect_attempts: int = ..., ping_interval: int = ..., max_outstanding_pings: int = ..., dont_randomize: bool = ..., flusher_queue_size: int = ..., no_echo: bool = ..., tls: SSLContext | None = ..., tls_hostname: str | None = ..., tls_handshake_first: bool = ..., user: str | None = ..., password: str | None = ..., token: str | None = ..., drain_timeout: int = ..., signature_cb: Callable[[str], bytes] | None = ..., user_jwt_cb: Callable[[], bytearray | bytes] | None = ..., user_credentials: str | tuple[str, str] | RawCredentials | Path | None = ..., nkeys_seed: str | None = ..., nkeys_seed_str: str | None = ..., inbox_prefix: str | bytes = ..., pending_size: int = ..., flush_timeout: float | None = ..., ws_connection_headers: dict[str, list[str]] | None = ...) -> Coroutine[Any, Any, None]
services\stt-provider\src\stt_provider\main.py:49: note:     Expected:
services\stt-provider\src\stt_provider\main.py:49: note:         def subscribe(self, subject: str, queue: str = ..., cb: Any = ..., **kwargs: Any) -> Coroutine[Any, Any, Any]
services\stt-provider\src\stt_provider\main.py:49: note:     Got:
services\stt-provider\src\stt_provider\main.py:49: note:         def subscribe(self, subject: str, queue: str = ..., cb: Callable[[Msg], Awaitable[None]] | None = ..., future: Future[Any] | None = ..., max_msgs: int = ..., pending_msgs_limit: int = ..., pending_bytes_limit: int = ...) -> Coroutine[Any, Any, Subscription]
Found 2 errors in 2 files (checked 7 source files)
Type checking C:\Users\Tom\source\repos\live-stt\services\stt-provider...

Type checking failed.
